Fix contrast issue

--- a/src/form.scss
+++ b/src/form.scss
@@ -104,11 +104,7 @@ select {
   background-color: $green-color;
   border: 5px solid $green-color;
   border-radius: $border-radius;
-
-  &:focus {
-    background-color: $green-color;
-    color: $dark-font;
-  }
+  color: white;
 }
 
 .row p {
@@ -119,11 +115,7 @@ select {
   background-color: $red-color;
   border: 5px solid $red-color;
   border-radius: $border-radius;
-
-  &:focus {
-    background-color: $red-color;
-    color: $dark-font;
-  }
+  color: white;
 }
 
 .answer-buttons {
